--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -22,6 +22,13 @@
         <div class="question-area glass-panel" id="question-container">
             <div id="question-text" class="question-text"></div>
             <div id="question-subtext" class="question-subtext hidden">Get ready for the next question...</div>
+            <div class="hot-seat-banner hidden" id="hot-seat-banner" aria-hidden="true">
+                <div class="hot-seat-banner-icon" aria-hidden="true">🔥</div>
+                <div class="hot-seat-banner-copy">
+                    <div class="hot-seat-banner-title" id="hot-seat-banner-heading">Hot Seat Entry Open</div>
+                    <div class="hot-seat-banner-message" id="hot-seat-banner-message">Lions type JOIN in chat now!</div>
+                </div>
+            </div>
         </div>
         
         <!-- Answers Area -->
