--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -181,34 +181,27 @@
         <div class="credits-container">
             <div class="credits-content">
                 <div class="credits-header">
-                    <h1 class="credits-title">🎮 KIMBILLIONAIRE 🎮</h1>
+                    <h1 class="credits-title">🎮KIMBILLIONAIRE🎮</h1>
                     <div class="credits-subtitle">Thank you for playing!</div>
                 </div>
 
                 <div class="credits-section">
                     <h2 class="credits-heading">Created By</h2>
-                    <p class="credits-name">KageWins</p>
+                    <p class="credits-name">KageWins & Cyper22</p>
                 </div>
 
                 <div class="credits-section">
                     <h2 class="credits-heading">Game Host</h2>
-                    <p class="credits-name">AI Roary</p>
-                    <p class="credits-role">Powered by Gemini 2.5 Pro</p>
+                    <p class="credits-name">Cyper22</p>
+                    <p class="credits-role">Juice</p>
                 </div>
 
-                <div class="credits-section">
-                    <h2 class="credits-heading">Technical Development</h2>
-                    <p class="credits-name">Bridge Server System</p>
-                    <p class="credits-role">WebSocket Architecture</p>
-                    <p class="credits-name">React Control Panel</p>
-                    <p class="credits-role">Live Broadcasting Integration</p>
-                </div>
 
                 <div class="credits-section">
-                    <h2 class="credits-heading">Special Thanks</h2>
+                    <h2 class="credits-heading">Special Thanks to</h2>
                     <p class="credits-name">Our Amazing Community</p>
                     <p class="credits-name">All Players &amp; Participants</p>
-                    <p class="credits-name">Twitch Chat</p>
+                    <p class="credits-name">The guys in PSG</p>
                 </div>
 
                 <div class="credits-section">
@@ -219,24 +212,14 @@
                 </div>
 
                 <div class="credits-section">
-                    <h2 class="credits-heading">Audio &amp; Visual Effects</h2>
-                    <p class="credits-role">Applause Sound Effects</p>
-                    <p class="credits-role">Question Music</p>
-                    <p class="credits-role">Lock-In Effects</p>
-                    <p class="credits-role">Confetti Celebrations</p>
-                </div>
-
-                <div class="credits-section">
                     <h2 class="credits-heading">Powered By</h2>
-                    <p class="credits-name">OBS Studio</p>
-                    <p class="credits-name">Node.js &amp; React</p>
-                    <p class="credits-name">WebSocket Technology</p>
+                    <p class="credits-name">CoinWise</p>
                 </div>
 
                 <div class="credits-section">
                     <h2 class="credits-heading">Final Message</h2>
                     <p class="credits-name">🏆 Congratulations Winners! 🏆</p>
-                    <p class="credits-subtitle">See you next game!</p>
+                    <p class="credits-subtitle">See you next game! Stay Sharp Stay Wise</p>
                 </div>
 
                 <div class="credits-footer">
@@ -254,7 +237,7 @@
             <div class="hot-seat-profile-tagline" id="hot-seat-profile-tagline"></div>
             <div class="hot-seat-profile-blurb" id="hot-seat-profile-blurb"></div>
             <div class="hot-seat-profile-divider hidden" id="hot-seat-profile-divider"></div>
-            <div class="hot-seat-profile-story hidden" id="hot-seat-profile-story"></div>
+            <div class="hot-seat-profile-story " id="hot-seat-profile-story"></div>
             <div class="hot-seat-profile-alternates hidden" id="hot-seat-profile-alternates"></div>
         </div>
     </div>
