Add hot seat profile spotlight delay before questions

--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -236,6 +236,7 @@
             <div class="hot-seat-profile-name" id="hot-seat-profile-name">Player</div>
             <div class="hot-seat-profile-tagline" id="hot-seat-profile-tagline"></div>
             <div class="hot-seat-profile-blurb" id="hot-seat-profile-blurb"></div>
+            <div class="hot-seat-profile-countdown hidden" id="hot-seat-profile-countdown" aria-live="polite"></div>
             <div class="hot-seat-profile-divider hidden" id="hot-seat-profile-divider"></div>
             <div class="hot-seat-profile-story " id="hot-seat-profile-story"></div>
             <div class="hot-seat-profile-alternates hidden" id="hot-seat-profile-alternates"></div>
