--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -238,6 +238,10 @@
             <div class="hot-seat-profile-blurb" id="hot-seat-profile-blurb"></div>
             <div class="hot-seat-profile-divider hidden" id="hot-seat-profile-divider"></div>
             <div class="hot-seat-profile-story " id="hot-seat-profile-story"></div>
+            <div class="hot-seat-story-card hidden" id="hot-seat-profile-story-card">
+                <div class="hot-seat-story-card-label">User Story</div>
+                <div class="hot-seat-story-card-text" id="hot-seat-profile-story-text">some text!</div>
+            </div>
             <div class="hot-seat-profile-alternates hidden" id="hot-seat-profile-alternates"></div>
         </div>
     </div>
