--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -185,9 +185,9 @@
                     <div class="credits-subtitle">Thank you for playing!</div>
                 </div>
 
-                <div class="credits-section">
-                    <h2 class="credits-heading">Created By</h2>
-                    <p class="credits-name">KageWins & Cyper22</p>
+               <div class="credits-section">
+                    <h2 class="credits-heading">Powered By</h2>
+                    <p class="credits-name">CoinWise</p>
                 </div>
 
                 <div class="credits-section">
