--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -381,6 +381,19 @@
             </div>
         </div>
     </div>
+    <!-- Previous Winners Overlay -->
+<div class="leaderboard-overlay hidden" id="previous-winners-overlay">
+  <div class="leaderboard-overlay-content">
+    <div class="leaderboard-overlay-header">
+      <h2>🏆 PREVIOUS WINNERS</h2>
+    </div>
+    <div class="leaderboard-overlay-list" id="previous-winners-list"></div>
+    <div class="leaderboard-overlay-footer">
+      <div class="leaderboard-total-players" id="previous-winners-total">0 Winners</div>
+    </div>
+  </div>
+</div>
+
     
     <!-- Include JavaScript -->
     <script src="/static/gameshow.js"></script>
