Add previous winners views to overlay and control panel

--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -382,17 +382,19 @@
         </div>
     </div>
     <!-- Previous Winners Overlay -->
-<div class="leaderboard-overlay hidden" id="previous-winners-overlay">
-  <div class="leaderboard-overlay-content">
-    <div class="leaderboard-overlay-header">
-      <h2>🏆 PREVIOUS WINNERS</h2>
+    <div class="leaderboard-overlay hidden" id="previous-winners-overlay">
+        <div class="leaderboard-overlay-content">
+            <div class="leaderboard-overlay-header">
+                <h2>🏆 PREVIOUS WINNERS</h2>
+                <div class="previous-winners-meta" id="previous-winners-meta"></div>
+            </div>
+            <div class="previous-winners-note" id="previous-winners-note"></div>
+            <div class="leaderboard-overlay-list" id="previous-winners-list"></div>
+            <div class="leaderboard-overlay-footer">
+                <div class="leaderboard-total-players" id="previous-winners-total">0 Winners</div>
+            </div>
+        </div>
     </div>
-    <div class="leaderboard-overlay-list" id="previous-winners-list"></div>
-    <div class="leaderboard-overlay-footer">
-      <div class="leaderboard-total-players" id="previous-winners-total">0 Winners</div>
-    </div>
-  </div>
-</div>
 
     
     <!-- Include JavaScript -->
