--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -187,7 +187,7 @@
 
                <div class="credits-section">
                     <h2 class="credits-heading">Powered By</h2>
-                    <p class="credits-name">CoinWise</p>
+                    <p class="credits-name">CoinWise. Winners make sure to redeem your winnings over at Coinwise Discord redeem channel</p>
                 </div>
 
                 <div class="credits-section">
