Retune slot machine schedule and triggers

--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -187,12 +187,12 @@
                     <div class="slot-machine-lever">
                         <span class="label">Lever Lion</span>
                         <span class="value" id="slot-machine-lever-user">Awaiting pick</span>
-                        <div class="slot-machine-trigger" id="slot-machine-trigger-copy">Share 🦁 to spin</div>
+                        <div class="slot-machine-trigger" id="slot-machine-trigger-copy">Type JOIN in chat to enter</div>
                     </div>
                 </div>
             </div>
             <div class="slot-machine-footer">
-                <div class="slot-machine-note">Type JOIN before questions 5, 10, and 15 for a chance at an even Leo bonus (max 25 pts shared).</div>
+                    <div class="slot-machine-note">Type JOIN before questions 4, 9, and 14 for a chance at an even Leo bonus (max 25 pts shared).</div>
                 <div class="slot-machine-result" id="slot-machine-result"></div>
             </div>
         </div>
