Guard JOIN handling for slot machine and hot seat

--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -167,6 +167,9 @@
             <div class="slot-machine-header">
                 <div class="slot-machine-title">Leo Slot Machine</div>
                 <div class="slot-machine-status" id="slot-machine-status">Idle</div>
+                <button class="slot-machine-close-test hidden" id="slot-machine-close-test" type="button" aria-label="Close test spin">
+                    ✕ Close Test
+                </button>
             </div>
             <div class="slot-machine-body">
                 <div class="slot-machine-reels" id="slot-machine-reels">
