--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -440,6 +440,7 @@
 
     
     <!-- Include JavaScript -->
+    <script src="/emotes-update.js"></script>
     <script src="/static/gameshow.js"></script>
 </body>
 </html>
