--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -195,7 +195,7 @@
                 </div>
             </div>
             <div class="slot-machine-footer">
-                    <div class="slot-machine-note">Type JOIN before questions 4, 9, and 14 for a chance at an even Leo bonus (max 25 pts shared).</div>
+                    <div class="slot-machine-note">Type JOIN after each question (starting after Q1) for a shot at the Leo bonus (max 25 pts shared).</div>
                 <div class="slot-machine-result" id="slot-machine-result"></div>
             </div>
         </div>
