Enhance hot seat spotlight and credits pacing (#10)
* Enhance hot seat spotlight and credits pacing

* Fix hot seat profile typings

* Ensure hot seat profiles show on overlay

* Allow uploading hot seat stories from JSON

* Fix hot seat upload hint markup

* Add sample hot seat profiles JSON

* Normalize hot seat usernames with display suffixes

* Render uploaded hot seat stories on overlay

* Broadcast hot seat profile uploads to overlay

* Use hot seat upload map keys when normalizing profiles

* Improve hot seat profile matching

* Add pre-roll countdown before hot seat timer

* Delay hot seat timer until story card completes

* Delay hot seat timer until profile display ends

* Stop hot seat timer when answers lock

* Clear hot seat after reveal or advance

* Award hot seat points on host-locked answers

* Ensure hot seat prestart timers cleanly reset

* Tighten hot seat card padding

* Increase hot seat story readability

* Adjust hot seat story typography

* Nudge hot seat card higher on overlay

* Update gameshow.css

--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -266,11 +266,12 @@
     </div>
 
     <!-- Hot Seat Profile Overlay -->
-    <div class="hot-seat-profile-overlay hidden" id="hot-seat-profile-overlay" aria-hidden="true">
-        <div class="hot-seat-profile-card" role="dialog" aria-live="assertive">
-            <div class="hot-seat-profile-badge">Hot Seat Selected</div>
-            <div class="hot-seat-profile-name" id="hot-seat-profile-name">Player</div>
-            <div class="hot-seat-profile-tagline" id="hot-seat-profile-tagline"></div>
+        <div class="hot-seat-profile-overlay hidden" id="hot-seat-profile-overlay" aria-hidden="true">
+            <div class="hot-seat-profile-card" role="dialog" aria-live="assertive">
+                <div class="hot-seat-profile-countdown hidden" id="hot-seat-profile-countdown"></div>
+                <div class="hot-seat-profile-badge">Hot Seat Selected</div>
+                <div class="hot-seat-profile-name" id="hot-seat-profile-name">Player</div>
+                <div class="hot-seat-profile-tagline" id="hot-seat-profile-tagline"></div>
             <div class="hot-seat-profile-blurb" id="hot-seat-profile-blurb"></div>
             <div class="hot-seat-profile-divider hidden" id="hot-seat-profile-divider"></div>
             <div class="hot-seat-profile-story " id="hot-seat-profile-story"></div>
