Add central hot seat timer spotlight overlay

--- a/static/gameshow.html
+++ b/static/gameshow.html
@@ -133,6 +133,16 @@
                 <div class="hot-seat-hud-timer" id="hot-seat-hud-timer">60 seconds remaining</div>
             </div>
         </div>
+
+        <!-- Hot Seat Timer Spotlight -->
+        <div class="hot-seat-timer-overlay hidden" id="hot-seat-timer-overlay" aria-live="assertive" role="status">
+            <div class="hot-seat-timer-card">
+                <div class="hot-seat-timer-badge">🔥 HOT SEAT TIMER</div>
+                <div class="hot-seat-timer-headline" id="hot-seat-timer-headline">Hot Seat Live!</div>
+                <div class="hot-seat-timer-message" id="hot-seat-timer-message">Type JOIN in chat to grab the next hot seat.</div>
+                <div class="hot-seat-timer-count" id="hot-seat-timer-count">60s</div>
+            </div>
+        </div>
         
         
         <!-- Lifeline Voting Panel -->
